--- a/src/sass/backpages/_back_activity_detail.scss
+++ b/src/sass/backpages/_back_activity_detail.scss
@@ -87,5 +87,15 @@
                 margin: 0 20px;
             }
         }
+
+        .onoroff{
+            margin-top: 30px;
+            span{
+                font-size: $fs-s;
+            }
+            label{
+                margin-left: 20px;
+            }
+        }
     }
 }
