--- a/src/sass/frontpages/_news.scss
+++ b/src/sass/frontpages/_news.scss
@@ -73,6 +73,8 @@
     margin-right: 10px;
 }
 
+
+
 .min_news > img{
     max-width: 100%;
 }
@@ -87,13 +89,23 @@
     margin-top: 15px;
 }
 
+.a_out .a_in{
+    width: 400px;
+    margin: 0 auto;
+}
+
 
 @media screen and (max-width:576px){
     .min_news{
         width: 400px;
     }
+
     .main_min .a_out{
         width: 400px;
+    }
+
+    .a_out .a_in{
+        width: 300px;
     }
 }
 
