--- a/src/sass/frontpages/_news_in.scss
+++ b/src/sass/frontpages/_news_in.scss
@@ -20,7 +20,7 @@
     position: absolute;
     height: 300px;
     top: 600px;
-    left: 380px;
+    left: 280px;
     z-index: -15;
 }
 
@@ -50,6 +50,7 @@
 .left > a{
     font-size: 24px;
     color: $color_G;
+    margin-left: 200px;
 }
 
 .left a:last-child{
@@ -59,6 +60,7 @@
 .left p{
     margin-bottom: 150px;
     font-size: 15px;
+    text-align: center;
 }
 
 .right{
@@ -71,12 +73,17 @@
     max-height: 254px;
 }
 
-
 @media screen and (max-width:576px){
+    
+    .divtop{
+        margin-top: 30px;
+        margin-bottom: 70px;
+    }
+    
     .right img{
         margin-left: 0px;
-        width: 150px;
-        height: 100px;
+        width: 300px;
+        height: 200px;
     }
 
     .redboll{
@@ -87,8 +94,32 @@
     .yellowboll{
             left: 2px;
     }
+    .left > a{
+        padding-top: 50px;
+    }
+
+    .down{
+        flex-wrap: wrap;
+    }
+    
+    .down .left{
+        order: 2;
+    }
+
+    .down .right{
+        order: 1;
+        
+    }
+
 }
 
+
+
+@media screen and (max-width:1200px){
+    .left > a{
+        margin-left: 50px;
+    }
+}
 
 
 
