feat: 新增共用的 connection.php

--- a/src/sass/frontpages/_index.scss
+++ b/src/sass/frontpages/_index.scss
@@ -575,8 +575,12 @@
             h5{
                 text-align: center;
                 margin-top: 20px;
-                margin-bottom: 10px;
+                margin-bottom: 35px;
             }
+        }
+
+        .swiper-pagination-bullet-active{
+            background: $color_G;
         }
     }
 
