--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -266,7 +266,7 @@
            ul{
                 
                 background-color: $color_W;
-                height: 500px;
+                height: 70vh;
                 overflow: auto;
                 padding: 0;
            
