--- a/src/sass/frontpages/_activity.scss
+++ b/src/sass/frontpages/_activity.scss
@@ -152,9 +152,6 @@ button.hamburger_icon span.-hr.-bottom {
     top: auto;
 }
 
-.reserve {
-    cursor: pointer;
-}
 
 .item_img_icon {
     cursor: pointer;
@@ -372,7 +369,7 @@ input .slider [type=radio]:checked {
     position: absolute;
     z-index: 1;
     right: 0;
-    bottom: 0px;
+    bottom: 15px;
     animation: shake 2s infinite;
     transform-origin: bottom;
     width: 13vw;
@@ -385,20 +382,16 @@ input .slider [type=radio]:checked {
     margin-bottom: 10px;
     font-size: 16px;
     width: 180px;
-    // position: absolute;
+    position: absolute;
     border-style: none;
+    cursor: pointer;
     z-index: 2;
-    // right: 0;
-    // bottom: 0;
+    right: 0;
+    bottom: 0;
     color: black;
     height: 40px;
-    float:right;
 }
 
-.reserve:hover{
-    // animation: shake 3s infinite;
-    transform: scale(1.3);
-}
 
 
 
@@ -491,9 +484,27 @@ input .slider [type=radio]:checked {
 
 //---------------------------RWD-----------------------------------
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1230px) {
     .item_img_icon{
-        bottom:8px
+        bottom:28px
+    }
+}
+
+@media screen and (max-width: 1090px) {
+    .item_img_icon{
+        bottom:25px
+    }
+}
+
+@media screen and (max-width: 1045px) {
+    .item_img_icon{
+        bottom:30px
+    }
+}
+
+@media screen and (max-width: 1030px) {
+    .item_img_icon{
+        bottom:33px
     }
 }
 
