feat: 修改購物車高度，抓取商品資料 style: 修改member_checklist樣式

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -243,7 +243,7 @@
         }
 
         .shoppingCar{
-           width: 950px;
+           width: 90%;
            position: absolute;
            top: 10%;
            left: 50%;
@@ -251,7 +251,7 @@
            
 
            @include mobile{
-               top: 5%;
+                top: 5%;
                 width: 350px;
             }
            
