--- a/src/sass/frontpages/_member_checklist.scss
+++ b/src/sass/frontpages/_member_checklist.scss
@@ -3,24 +3,35 @@
     width: 100%;
     
     @include mobile{
-        width: 360px;
-    //  overflow-x: auto;
+
     }
     
 
 }
 
 .cl_list{
-    // display: flex;
-    justify-content: space-between;
-    // width: 1000px;
+    width: 100%;
     color: $color_W;
-    line-height: 60px;
+    // line-height: 60px;
     display: grid;
     grid-template-columns: 100%;
     @include mobile{
-        width: 360px;
-     overflow-x: auto;
+        width: 95%;
+        overflow-x: auto;
+        padding: 0;
+        margin: 0 10px;
+
+        &::-webkit-scrollbar-thumb{
+            box-shadow: inset 0 0 4px $color_G;
+            background-color: $color_G;
+            border-radius: 5px;
+            height: 2px;
+        }
+        &::-webkit-scrollbar{
+            width: 2px;
+            height: 5px;    
+            
+        }
     }
     
     
@@ -36,12 +47,15 @@
     height: 60px;
     background-color: $color_G;
     
+    @include mobile{
+        width: 250%;
+    }
 }
 
 .cl_list2{
     background-color: $color_W;
     color: $color_G;
-    line-height: 60px;
+    // line-height: 60px;
     border: 1px solid $color_G;
     display: grid;
     grid-template-columns: 15% 15% 10% 15% 15% 15% 10% 5%;
@@ -67,8 +81,8 @@
     border-radius: 4px;
     
     @include mobile {
-        width: 20px;
-        font-size: 14px;
+        // width: 20px;
+        // font-size: 14px;
     }
 
 
@@ -79,9 +93,12 @@
     grid-template-columns:  33% 33% 33%;
     padding: 16px;
     border: 1px solid $color_G;
-
     text-align: center;
+    p{
+        color: $color_G;
+    }
     
-    
-
+    @include mobile{
+        width: 250%;
+    }
 }
