--- a/src/sass/frontpages/_member_revise.scss
+++ b/src/sass/frontpages/_member_revise.scss
@@ -68,6 +68,7 @@
     height: 25px;
     border: 1px solid rgba(196, 196, 196, 0.8);
     border-radius: 4px;
+    margin-top: 10px;
 }
 
 //密碼
@@ -84,6 +85,7 @@
 
 .lbt{
     display: inline-block;
+    width: 80px;
 }
 
 .mb_btn{
