--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,3 +26,6 @@
 @import './frontpages/activity.scss';
 @import './frontpages/game';
 @import './frontpages/products';
+@import './frontpages/products_refrigeration.scss';
+@import './frontpages/products_necessities.scss';
+
