feat: 關閉網頁轉跳

--- a/src/layout/login_register.html
+++ b/src/layout/login_register.html
@@ -203,9 +203,9 @@
 
 
         // 忘記密碼
-        if(e.target.classList.contains("send-reset-email")){
-            window.location.href = "./password_reset_2.html";
-        }
+        // if(e.target.classList.contains("send-reset-email")){
+        //     window.location.href = "./password_reset_2.html";
+        // }
     })
 
 
