--- a/src/layout/back_head.html
+++ b/src/layout/back_head.html
@@ -10,3 +10,6 @@
     <script src="./js/vendors/jquery-3.6.0.min.js"></script>
     <script src="./js/vendors/vue.js"></script>
     <!-- <script src="./js/vendors/vue.min.js"></script> -->
+    <!-- sweetalert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
