--- a/src/layout/login_register.html
+++ b/src/layout/login_register.html
@@ -87,7 +87,7 @@
 
         <form action="" method="POST" id="password_reset" class="forget-password form-off">
             <h4>忘記密碼</h4>
-            <p>請在下面輸入您的信箱或帳號。我們會寄一封信給您，裡面含有可以重新設定您的密碼的連結。</p>
+            <p id="hint">請在下面輸入您的信箱或帳號。我們會寄一封信給您，裡面含有可以重新設定您的密碼的連結。</p>
             <label for="userMail"><h5>電子郵件</h5></label>
             <input type="email" name="userMail" id="userMail">
             
