--- a/src/sass/backpages/_back_activity_detail.scss
+++ b/src/sass/backpages/_back_activity_detail.scss
@@ -56,7 +56,7 @@
         input {
             border: 1px solid #ccc;
             border-radius: 8px;
-            margin-left: 20px;
+            margin-left: 25px;
             padding: 10px;
             font-size: $fs-xs;
         }
@@ -72,7 +72,12 @@
             }
         }
         input[type="radio"] {
-                width: 5%;
+                border: 0px;
+                width: 3%;
+                height: 2em;
+                margin-right: 7px;
+                margin-left: 40px;
+                filter: hue-rotate(323deg);
         }
         input[type="file"] {
             border: none;
