--- a/src/layout/back_head.html
+++ b/src/layout/back_head.html
@@ -12,4 +12,4 @@
     <!-- <script src="./js/vendors/vue.min.js"></script> -->
     <!-- sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
