--- a/src/layout/head.html
+++ b/src/layout/head.html
@@ -18,4 +18,4 @@
     <script src="js/vendors/twzipcode.js"></script>
     <!-- sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script> -->
