style: 後臺活動頁彈窗圖片路徑修正

--- a/src/sass/backpages/_back_activity.scss
+++ b/src/sass/backpages/_back_activity.scss
@@ -133,13 +133,13 @@
         margin-top: 40px;
         text-align: center;
         &:before{
-            content: url("../../img/backpages/title_cow_left.png");
+            content: url("../img/backpages/title_cow_left.png");
             width: 30px;
             display: inline;
             margin-right: 50px;
         }
         &:after{
-            content: url("../../img/backpages/title_cow_right.png");
+            content: url("../img/backpages/title_cow_right.png");
             width: 30px;
             display: inline;
             margin-left: 50px;
