--- a/src/layout/login_register.html
+++ b/src/layout/login_register.html
@@ -165,9 +165,23 @@
     $(".member-icon").on("click", function (e) {
         e.preventDefault();
         // TODO: 檢查是否有登入
-        $("#login_box").removeClass("-off");
-        $("#back_bg").removeClass("-off");
-    })
+        fetch('./php/check_login.php', {
+            method: 'POST',
+            headers: {
+                'Content-type': 'application/json'
+            },
+        })
+            .then(resp =>  resp.json())   
+            .then(body => {
+                const { successful, message, ID, NAME } = body;
+                if(successful){
+                    location.href = './member.html';
+                }else{
+                    $("#login_box").removeClass("-off");
+                    $("#back_bg").removeClass("-off");
+                }
+            })
+    });
 
     $('.loginBlock').on("click", function (e) {
         if (e.target.classList.contains("register_link")) {
@@ -212,11 +226,17 @@
     $('.bi-x').on('click', function (e) {
         $("#login_box").addClass("-off");
         $("#back_bg").addClass("-off");
+        $("#login_form").removeClass("form-off");
     });
 
     $("#back_bg").on('click', function () {
         $("#login_box").addClass("-off");
         $("#back_bg").addClass("-off");
+        $("#login_form").removeClass("form-off");
+        $("#register1").addClass("form-off");
+        $("#register2").addClass("form-off");
+        $("#register3").addClass("form-off");
+        $(".password_reset forget-password").addClass("form-off");
     });
 
 </script>
