--- a/src/sass/layout/_login_register.scss
+++ b/src/sass/layout/_login_register.scss
@@ -334,10 +334,6 @@ div#back_bg {
   display: none !important;
 }
 
-#login_box.-off{
-  display: none;
-}
-
-#back_bg.-off{
+#login_box.-off,#back_bg.-off{
   display: none;
 }
