--- a/src/sass/backpages/_back_activity.scss
+++ b/src/sass/backpages/_back_activity.scss
@@ -38,7 +38,7 @@
             border: 1px solid $color_G;
             border-radius: 5px;
             display: flex;
-            padding: 20px;
+            padding: 15px;
             margin-bottom: 20px;
             opacity: 1;
             transition: opacity 1s;
@@ -89,7 +89,7 @@
                 }
                 .actButtons{
                     float: right;
-                    margin-top: 20px;
+                    margin-top: 15px;
                     .modify_btn{
                         margin-left: 20px;
                     }
@@ -115,6 +115,8 @@
 // 彈窗
 .act-member-overlay{
     width: 70%;
+    max-height: 85vh;
+    overflow: auto;
     background-color: $color_W;
     position: fixed;
     z-index: 1000;
@@ -122,6 +124,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
+    &::-webkit-scrollbar-thumb{
+        // box-shadow: inset 0 0 8px $color_W;
+        background-color: $color_G;
+        border-radius: 8px;
+        height: 10px;
+    }
+    &::-webkit-scrollbar{
+        width: 10px;
+    }
 
     .x-btn{
         float: right;
@@ -171,7 +182,7 @@
     .signedup-members{
         width: 80%;
         margin: 30px auto 50px;
-        border: 1px solid $color_G;
+        border: 1px solid $color_G;       
         thead{
             background-color: $color_G;
             td{
