Revert "no message"
This reverts commit 9053a103fd82a012121b4e4bcad96058d1dfee39.

--- a/src/sass/layout/_login_register.scss
+++ b/src/sass/layout/_login_register.scss
@@ -334,6 +334,10 @@ div#back_bg {
   display: none !important;
 }
 
-#login_box.-off,#back_bg.-off{
+#login_box.-off{
+  display: none;
+}
+
+#back_bg.-off{
   display: none;
 }
