--- a/src/layout/back_head.html
+++ b/src/layout/back_head.html
@@ -11,5 +11,5 @@
     <script src="./js/vendors/vue.js"></script>
     <!-- <script src="./js/vendors/vue.min.js"></script> -->
     <!-- sweetalert -->
-    <script src="./js/vendors/sweetalert2.all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
