--- a/src/sass/backpages/_back_activity_detail.scss
+++ b/src/sass/backpages/_back_activity_detail.scss
@@ -25,11 +25,13 @@
         width: 70%;
         height: 400px;
         margin: 0 auto;
-        display: flex;
-        justify-content: center;
+        position: relative;
         overflow: hidden;
+        text-align: center;
             .preview-img{
                 max-width: 100%;
+                max-height: 100%;
+                @include positionCenter();
             }
             span{
                 line-height: 400px;
