style: 小遊戲手機版綿羊位置

--- a/src/sass/frontpages/_game.scss
+++ b/src/sass/frontpages/_game.scss
@@ -101,7 +101,7 @@
         }
 
         .sheep {
-            transform: scale(.8) translateX(-3%) translateY(6%);
+            transform: scale(.8) translateX(-3%) translateY(20vh);
         }
 
         .shaver {
