feat 會員修改PHP 登出系統  訂單資訊調整

--- a/src/sass/frontpages/_member_checklist.scss
+++ b/src/sass/frontpages/_member_checklist.scss
@@ -115,7 +115,7 @@
 
 
 .tblist{
-    border: 1px solid green;
+    border: 1px solid $color_G;
     width: 1200px;
 }
 
@@ -136,6 +136,7 @@ tr{
 .li2 td{
     padding-left: 20px;
     text-align: center;
+    padding-top: 20px;
     
 }
 
@@ -147,4 +148,10 @@ tr{
 
 .li3{
 border: 1px solid $color_G ;
+
+
+.li3 td{
+   padding-top: 20px;
+    
+    }
 }
