--- a/src/sass/backpages/_back_activity_detail.scss
+++ b/src/sass/backpages/_back_activity_detail.scss
@@ -76,10 +76,15 @@
             width: 100%;
             margin-left: 0;
         }
+        input{
+            &:disabled{
+                background-color: #e5e5e6;
+            }
+        }
         input[type="date"], input[type="time"]{
             width: 30%;
             &:read-only{
-                background-color: #DADCDF;
+                background-color: #e5e5e6;
             }
         }
         input[type="radio"] {
