--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -87,7 +87,7 @@
 						<li>
 							<div class="spOrout">
 								<button class="gosp" id="gosp">繼續購物</button>
-								<a href="./checkout.html"><button class="Co">結帳</button></a>
+								<button class="Co">結帳</button>
 							</div>
 						</li>
                     </ul>
