--- a/src/layout/login_register.html
+++ b/src/layout/login_register.html
@@ -19,7 +19,7 @@
             <label for="password"><h5>密碼</h5></label>
             <input type="password" name="password" id="password">
             <button type="button" id="login_btn">登入</button>
-            <button type="button" id="FBlogin_btn">透過FACEBOOK登入</button>                    
+            <!-- <button type="button" id="FBlogin_btn">透過FACEBOOK登入</button>                     -->
         </form>
 
         <div class="toggle-links">
