--- a/src/sass/backpages/_back_additem.scss
+++ b/src/sass/backpages/_back_additem.scss
@@ -1,5 +1,6 @@
-.bk_index .bk_top{
+.bk_top{
     display: flex;
+    margin-top: 50px;
 }
 .bk_top .bk_text{
     font-size: 24px;
@@ -7,6 +8,7 @@
 
 .bk_top .bk_input{
     width: 500px;
+    margin-left: 20px;
 }
 
 .bk_index form{
@@ -19,56 +21,133 @@
     margin-left: 105px;
 }
 
+.news-container{
+    margin-left: 20%;
+    @include back_title();
+    form{
+        width: 900px;
+        margin: 0 auto;
+    }
+
+    textarea{
+        margin-top: 10px;
+        resize: none;
+        padding: 20px;
+        font-size:20px;
+        width: 80%;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+    }
+    input {
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        margin-left: 25px;
+        padding: 10px;
+        font-size: 20px;
+        letter-spacing: 1px;
+    }
+}
+
+.bk_main{
+    // margin-top: 30px;
+    margin: 30px auto 0;
+    .date{
+        margin-top: 30px;
+        span{
+            font-size: $fs-s;
+        }
+    }
+}
+
 .bk_img img{
     max-width: 100%;
     height: 330px;
 }
 
 .bk_maintext{
+    margin-top: 30px;
     display: flex;
-    margin-top: 15px;
-    align-items: center;
-    
+    align-items: flex-start;
+
+    .title{
+        font-size: $fs-s;
+    }
+
+    .img-area{
+        margin-left: 17px;
+    }
+
+    #p_file{
+        margin-bottom: 20px;
+    }
+    .choose-file{
+        margin-bottom: 20px;
+    }
+    .filename{
+        transform: translateY(-10px);
+        display: inline-block;
+        margin-left: 10px;
+    }
+    #drop_zone{
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    width: 500px;
+    height: 300px;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+        .preview-img{
+            max-width: 100%;
+            max-height: 100%;
+            @include positionCenter();
+        }
+        span{
+            line-height: 400px;
+        }
+
+    }
+    #drop_zone.-on {
+        border: 1px dashed lightseagreen;
+        box-shadow: 3px 3px 5px lightseagreen inset, -3px -3px 5px lightseagreen inset;
+    }
 }
 
-.bk_file{
-    width: 200px;
-    height: 50px;
+// .bk_file{
+//     width: 200px;
+//     height: 50px;
     
-}
+// }
 
 .bl_down{
-    display: flex;
-    margin-top: 50px;
+    margin-top: 25px;
 }
 
 
-.bl_down .bl_input{
-    width: 750px;
-    height: 414px;
-}
+// .bl_down .bl_input{
+//     width: 750px;
+//     height: 414px;
+// }
 
-.bk_down{
-    margin-top: 50px;
-}
+// .bk_down{
+//     margin-top: 50px;
+// }
 
 .buttonArea{
     display: flex;
     margin-bottom: 80px;
+    justify-content: center;
+
+    .btn_o{
+        width: 203px;
+        height: 42px;
+        @include button($color_G);
+        margin-right: 30px;
+    }
+
+    .btn_d{
+        width: 203px;
+        height: 42px;
+        @include button($color_R);
+    }
 }
-
-
-.buttonArea .btn_o{
-    width: 203px;
-    // height: 62px;
-    @include button($color_G);
-    margin-left: 200px;
-}
-
-.buttonArea .btn_d{
-    width: 203px;
-    // height: 62px;
-    @include button($color_R);
-    margin-left: 20px;
-}
-
