--- a/src/layout/head.html
+++ b/src/layout/head.html
@@ -19,3 +19,4 @@
     <!-- sweetalert -->
     <script src="./js/vendors/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
