feat:照片存取成功

--- a/src/sass/backpages/_back_order_detail.scss
+++ b/src/sass/backpages/_back_order_detail.scss
@@ -14,8 +14,8 @@
             margin-top: 10px;
             li{
                 display: grid;
-                // grid-template-columns: 20% 20% 20% 20% 20%;
-                grid-template-columns: 33.3% 33.3% 33.3%;
+                grid-template-columns: 20% 20% 20% 20% 20%;
+                // grid-template-columns: 33.3% 33.3% 33.3%;
                 text-align: center;
                 align-items: center;
             }
