--- a/src/sass/frontpages/_checkout.scss
+++ b/src/sass/frontpages/_checkout.scss
@@ -459,6 +459,9 @@
             //卡號
             .payId {
                 width: 50px;
+				@include mobile{
+					width: 44px;
+				}
             }
             //到期日
             .date {
